@@ -1,5 +1,5 @@
 /*
- * Copyright 2022 Thoughtworks, Inc.
+ * Copyright 2023 Thoughtworks, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +18,7 @@ package com.thoughtworks.go.plugin.configrepo.contract;
 import com.thoughtworks.go.plugin.configrepo.contract.tasks.CRBuildTask;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
 import static com.thoughtworks.go.util.TestUtils.contains;
@@ -65,7 +65,7 @@ public class CRStageTest extends AbstractCRTest<CRStage> {
         stageWithEnv.addJob(jobWithResource);
 
         CRApproval manualWithAuth = new CRApproval(CRApprovalCondition.manual);
-        manualWithAuth.setRoles(Arrays.asList("manager"));
+        manualWithAuth.setRoles(List.of("manager"));
         stageWithApproval = new CRStage("deploy");
         stageWithApproval.setApproval(manualWithAuth);
         stageWithApproval.addJob(buildRake);
