@@ -1,5 +1,5 @@
 /*
- * Copyright 2022 Thoughtworks, Inc.
+ * Copyright 2023 Thoughtworks, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,7 +25,7 @@ import java.util.Collections;
 public class ErrorGeneratingTestGoPlugin implements GoPlugin {
     @Override
     public GoPluginIdentifier pluginIdentifier() {
-        return new GoPluginIdentifier("extension-1", Collections.singletonList("1.0"));
+        return new GoPluginIdentifier("extension-1", List.of("1.0"));
     }
 
     /* This should fail with an AbstractMethodError if you call something on it, which doesn't exist. */
