@@ -1,5 +1,5 @@
 /*
- * Copyright 2022 Thoughtworks, Inc.
+ * Copyright 2023 Thoughtworks, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -47,7 +47,7 @@ public class Filters {
     }
 
     public static Filters single(DashboardFilter filter) {
-        return new Filters(Collections.singletonList(filter));
+        return new Filters(List.of(filter));
     }
 
     public static Filters defaults() {
