@@ -1,5 +1,5 @@
 /*
- * Copyright 2022 Thoughtworks, Inc.
+ * Copyright 2023 Thoughtworks, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,7 +22,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
@@ -65,7 +64,7 @@ public class AuthorityGranter {
     }
 
     private Set<GrantedAuthority> anonymousOnlyAuthority() {
-        return Collections.singleton(ROLE_ANONYMOUS.asAuthority());
+        return Set.of(ROLE_ANONYMOUS.asAuthority());
     }
 
     private void checkAndAddTemplateAdmin(String username, Set<GrantedAuthority> authorities) {
